Navbar has now position fixed and registration labels are now visible.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,9 +2,29 @@
 // Body
 $body-bg-color: #141d26;
 
+$theme-colors: (
+    "primary": #1c2938,
+    "secondary": #1da1f2
+);
+
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+$spacer: 1rem !default;
+$spacers: () !default;
+$spacers: map-merge(
+    (
+        0: 0,
+        1: ($spacer * .25),
+        2: ($spacer * .5),
+        3: $spacer,
+        4: ($spacer * 1.5),
+        5: ($spacer * 3),
+        6: ($spacer * 4.5)
+    ),
+    $spacers
+);
 
 $grid-gutter-width: 8px !default;
